[package]
name = "septem"
version = "0.1.0"
authors = ["p0l1t1c1an <boicken19@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xcb = "0.9"
xcb-util = { version = "0.3", features = ["ewmh"] }

