[package]
name = "septem"
version = "0.1.0"
authors = ["p0l1t1c1an <boicken19@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
xcb = "0.9"
xcb-util = { version = "0.3", features = ["ewmh"] }
futures = "0.3"
tokio = { version = "0.3", features = ["full"] }
chrono = "0.4"
toml = "0.5"
thiserror = "1.0"

[build-dependencies]
cc = "1.0"

