[package]
name = "septem"
version = "0.1.0"
authors = ["p0l1t1c1an <boicken19@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

chrono = { version = "0.4", features = ["serde"] }

xcb = { version = "0.9", features = ["thread"] }
xcb-util = { version = "0.3", features = ["ewmh", "thread"] }

futures = "0.3"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.50"

signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
toml = "0.5"
csv = "1.1"

thiserror = "1.0"

[build-dependencies]
cc = "1.0"

